Fix cut off usernames in Messages column

--- a/Resources/Scripts/styles/browser.css
+++ b/Resources/Scripts/styles/browser.css
@@ -268,3 +268,22 @@ html[data-td-font='smallest'] .tweet-detail-wrapper .badge-verified:before {
 .is-options-open .column-type-icon {
   bottom: 27px !important;
 }
+
+/********************************************/
+/* Fix cut off usernames in Messages column */
+/********************************************/
+
+.column-type-message.is-shifted-1 .column-title-container {
+  height: 100%;
+  border-bottom-color: transparent;
+}
+
+#tduck .column-type-message.is-shifted-1 .column-title-items {
+  height: 100%;
+  margin-left: 4px !important;
+  padding-top: 1px;
+}
+
+.column-type-message.is-shifted-1 .username {
+  vertical-align: bottom;
+}
